# flask-imghost

./: Dockerfile  Pipfile  README.md  app.py  build_ecr.sh  database.py  migrate.py  models.py  package.json  pyproject.toml  requirements.txt  sqlite_models.py  webpack.config.js
client/: api_keys.js  app.js  collection_detail.js  collections.js  create_account.js  home.js  images.js  login.js  main.js  nav.js  upload.js
client/sass/: _api-key.sass  _collection.sass  _colors.sass  _forms.sass  _image.sass  _layout.sass  _nav.sass  _upload.sass  _vars.sass  main.sass
static/: app.js  bundle.js
templates/: collections.html  images.html  index.html  layout.html  login.html  react-client.html  signup.html  upload.html
